--- a/src/styles/mapinfo.module.scss
+++ b/src/styles/mapinfo.module.scss
@@ -21,7 +21,6 @@
 //   }
 // }
 .team {
-  position: fixed;
   width: 410px;
   height: 100vh;
   gap: 1rem;
@@ -89,21 +88,6 @@
     .mapTypeImage {
       filter: drop-shadow(-2px 2px 1px black);
     }
-    .logoSizer {
-      height: 100%;
-      position: relative;
-      max-height: 100px;
-      .logoContainer {
-        position: absolute;
-        top: 0;
-        right: 500%;
-        overflow: hidden;
-        height: 215%;
-        aspect-ratio: 1 / 2;
-        max-width: 100px;
-        filter: drop-shadow(-2px 2px 1px black);
-      }
-    }
 
     .map {
       flex-shrink: 1;
@@ -114,6 +98,7 @@
       overflow: hidden;
       position: relative;
       padding-block: 0.2rem;
+      max-height: 10rem;
       &::before {
         content: "";
         // background-color: black;
@@ -125,6 +110,15 @@
         //!margin-bottom: var(--regheight);
         margin-top: 2rem;
         transition: all 1000ms;
+      }
+      .logoSizer {
+        .winnerLogo {
+          position: static !important;
+          // padding-top: 100%;
+          object-fit: scale-down;
+          max-width: 100px;
+        }
+        height: 100%;
       }
       display: flex;
       justify-content: space-between;
@@ -139,7 +133,7 @@
         // margin-top: 1rem;
         flex-grow: 8;
         flex-basis: 50rem;
-        max-height: 619px;
+        max-height: 605px;
         &::before {
           content: "UP NEXT";
           background-color: black;
@@ -193,16 +187,15 @@
       }
 
       .mapType {
-        // font-size: 6rem;
-        color: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        // max-height: inherit;
+        & > * {
+          object-fit: scale-down;
+        }
+
         height: 100%;
-        aspect-ratio: 1 / 1;
+        aspect-ratio: 1/1;
         max-width: 100px;
-        filter: drop-shadow(-2px 2px 1px black);
+        object-fit: scale-down;
+        display: flex;
       }
       .mapText {
         color: white;
